removed template code and fixed visible scroll bar in print view

--- a/src/index.css
+++ b/src/index.css
@@ -11,7 +11,3 @@ body {
   overflow: hidden;
 }
 
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
-}
